--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Sharp:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/media-query.css">
 </head>
@@ -39,8 +40,8 @@
                     </div>
 
                     <input type="submit" value="Entrar">
-                    <a href="esquice.html">
-                        Esqueci a senha <i class="material-icons">mail</i>
+                    <a href="esquice.html" class="botao">
+                        Esqueci a senha <span class="material-symbols-outlined">mail</span>
                     </a>
                 </form>
             </div>
