--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 </p>
                 <form action="login.php" method="post" autocomplete="on">
 
-                    <div class="compo">
+                    <div class="campo">
                         <span class="material-symbols-sharp">
                             person
                             </span>
